deploy/infrastructure/homer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app.kubernetes.io/name: homer
  name: homer
  namespace: tools
spec:
  ingressClassName: traefik
  rules:
  - host: homer.scottseo.tech
    http:
      paths:
      - backend:
          service:
            name: homer 
            port:
              number: 8080 
        path: /
        pathType: Prefix
